added 2 new stuff of my work

--- a/A1_T1_20230335/CMakeLists.txt
+++ b/A1_T1_20230335/CMakeLists.txt
@@ -3,4 +3,5 @@ project(A1_T1_20230335)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(A1_T1_20230335 main.cpp)
+add_executable(A1_T1_20230335 A1_T1_20230335.cpp
+        A1_T1_20230335.cpp)
